--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     .card.matched {
       opacity: 0;
       pointer-events: none;
+      position: absolute; /* Remove from layout flow */
     }
 
     button {
