--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      overflow-y: scroll;
+      overflow-y: auto;  /* Allow scrolling on small screens */
       flex-direction: column;
+      padding: 10px;
     }
 
     .game-container {
@@ -29,7 +30,7 @@
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
       width: 100%;
       max-width: 800px;
-      margin: 20px;
+      margin: 20px auto;
     }
 
     h1 {
@@ -43,7 +44,7 @@
 
     .game-board {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(120px, 1fr)); /* Make sure buttons are responsive */
+      grid-template-columns: repeat(auto-fill, minmax(120px, 1fr)); /* Adjust the grid layout */
       gap: 10px;
       justify-items: center;
       align-items: center;
@@ -126,10 +127,23 @@
       font-family: 'Arial', sans-serif;
     }
 
+    /* Responsive adjustments for narrow screens */
     @media (max-width: 600px) {
+      h1 {
+        font-size: 1.5rem;
+      }
+
       button {
         font-size: 14px;
         padding: 15px;
+      }
+
+      .game-container {
+        padding: 15px;
+      }
+
+      #timer {
+        font-size: 16px;
       }
     }
   </style>
